fix: removed overflow-x error

--- a/src/Components/PromoVideo/PromoVideo.css
+++ b/src/Components/PromoVideo/PromoVideo.css
@@ -18,7 +18,7 @@
   font-family: "Gotham";
   font-style: normal;
   font-weight: 700;
-  font-size: 120px;
+  font-size: 7vw;
   line-height: 133px;
   color: #2cb774;
 }
